--- a/site/public/css/styleDash.css
+++ b/site/public/css/styleDash.css
@@ -139,7 +139,7 @@ ion-icon {
 
 .div_mensagem1{
   font-size: 32px;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .maior {
@@ -246,4 +246,124 @@ ion-icon {
 
 .div_mensagem2 button:active {
   transform: translateY(15px);
+}
+
+.pequenininho {
+  font-size: xx-small;
+  text-align: center;
+  cursor: pointer;
+  color: #ffffffda;
+  text-decoration: none;
+  margin-top: 20px;
+}
+
+.calc {
+  position: absolute;
+  display: none;
+  width: 13.5vw;
+  height: auto;
+  backdrop-filter: blur(20px);
+  background-color: transparent;
+  color: #fff;
+  border-radius: 20px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+  border: 2px solid rgba(255, 255, 255, .5);
+  overflow: hidden;
+  padding: 10px;
+  text-align: center;
+  transform: scale(1.4);
+  top: 20%;
+  left: 3.6vw;
+  z-index: -100;
+}
+
+.dentro_calc {
+padding: 15px;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.dentro_calc input {
+background-color: transparent;
+border: 1px solid rgba(255, 255, 255, .5);
+border-radius: 10px;
+text-align: center;
+outline: 0;
+}
+
+.dentro_calc select {
+background-color: transparent;
+border: 1px solid rgba(255, 255, 255, .5);
+border-radius: 10px;
+outline: 0;
+}
+
+.dentro_calc select option {
+background-color: transparent;
+border: 1px solid rgba(255, 255, 255, .5);
+color: black;
+}
+
+.btn_calc {
+background-color: transparent;
+border: 1px solid rgba(255, 255, 255, .5);
+border-radius: 10px;
+width: 40%;
+height: 30px;
+cursor: pointer;
+transition-duration: 0.3s;
+margin-top: 20px;
+color: white;
+}
+
+.btn_calc:hover {
+background-color: #ffffffa1;
+color: rgb(0, 0, 0);
+}
+
+.btn_calc:active {
+transform: translateY(5px);
+}
+
+.manual {
+margin-top: 10px;
+margin-bottom: 10px;
+}
+
+.mensagem {
+margin-top: 10px;
+text-align: center;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+#confirmar .dentro_calc span{
+  font-size: xx-small;
+  margin-top: 10px;
+}
+
+.icon-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  font-size: 2em;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom-left-radius: 20px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.block {
+  display: block;
+  z-index: 100;
+}
+
+#id_pity {
+  color: rgb(255, 255, 255);
 }
