--- a/site/public/css/styleDash.css
+++ b/site/public/css/styleDash.css
@@ -367,3 +367,21 @@ align-items: center;
 #id_pity {
   color: rgb(255, 255, 255);
 }
+
+.saindo{
+  display: none;
+  position: absolute;
+  z-index: -1;
+  width: auto;
+  height: auto;
+  border-radius: 15px;
+  border: black 3px solid;
+  background-color: transparent;
+  backdrop-filter: blur(20px);
+  padding: 20px;
+  left: 41vw;
+}
+.block {
+  display: block;
+  z-index: 9999;
+}
