--- a/site/public/css/styleLogin.css
+++ b/site/public/css/styleLogin.css
@@ -273,3 +273,8 @@ header {
     backdrop-filter: blur(10px);
     display: none;
 }
+
+#termosCondições {
+    /* text-decoration: none; */
+    cursor: pointer;
+}
